[package]
name = "glow_test"
version = "0.1.0"
authors = ["jprekz <jprekz@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"


[dependencies]
glow = "0.6"
wasm-bindgen = "0.2"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = { version = "0.24", optional = true }

[features]
window-glutin = ["glutin", "glow/glutin"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web_sys = { version = "0.3", package = "web-sys", features=["console"], optional = true }
