[package]
name = "glow_test"
version = "0.1.0"
authors = ["jprekz <jprekz@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "glow_test_web"
crate-type = ["cdylib", "rlib"]

[features]
default = ["web"]
web = ["winit/web-sys", "glow/web-sys"]
window-glutin = ["glow/glutin"]

[dependencies]
glow = "0.6"

[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
glutin = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
winit = "0.23.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlElement',
    'Window',
]
