[package]
name = "glow_test"
version = "0.1.0"
authors = ["jprekz <jprekz@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "glow_test_web"
crate-type = ["cdylib", "rlib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glow = {version = "0.6", features = ["glutin"] }
glutin = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
glow = {version = "0.6", features = ["web-sys"] }
wasm-bindgen = "0.2"
winit = { version = "0.23.0", features = ["web-sys"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlElement',
    'Window',
]
