[package]
name = "gltf_test"
version = "0.1.0"
authors = ["jprekz <jprekz@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "gltf_test_web"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wrapper_test = {path = "../wrapper_test"}
gltf = { version = "0.15", features = ["import", "utils"] }
