[package]
name = "golem_test"
version = "0.1.0"
authors = ["jprekz <jprekz@users.noreply.github.com>"]
edition = "2018"

[lib]
name = "golem_test_web"
crate-type = ["cdylib", "rlib"]

[dependencies]
blinds = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
golem = "0.1.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
golem = { version = "0.1.7", features = ["web-sys"] }
