[package]
name = "wrapper_test"
version = "0.1.0"
authors = ["jprekz <jprekz@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
golem = "0.1.7"
glutin = "0.24"

[target.'cfg(target_arch = "wasm32")'.dependencies]
golem = { version = "0.1.7", features = ["web-sys"] }
wasm-bindgen = "0.2"
winit = { version = "0.23.0", features = ["web-sys"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    'console',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'HtmlElement',
    'Window',
]
